--- a/package.json
+++ b/package.json
@@ -6,13 +6,28 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "body-parser": "~1.18.2",
+    "bootstrap": "^3.3.7",
+    "compression": "^1.7.1",
     "cookie-parser": "~1.4.3",
+    "css-loader": "^0.28.7",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
+    "expose-loader": "^0.7.3",
     "express": "~4.15.5",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "helmet": "^3.9.0",
+    "jquery": "^3.2.1",
     "morgan": "~1.9.0",
+    "popper": "^1.0.0",
+    "postcss-loader": "^2.0.8",
     "serve-favicon": "~2.4.5",
+    "style-loader": "^0.19.0",
+    "uglifyjs-webpack-plugin": "^1.0.1",
     "yui-compressor": "^0.1.3"
+  },
+  "devDependencies": {
+    "webpack": "^3.8.1"
   }
 }
